--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ permalink:           pretty
 
 
 # Setup
-title:               curiousOlive
-tagline:             'A Jekyll theme'
+title:               CuriousOlive
+tagline:             'Curious by nature'
 description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:                 http://lanyon.getpoole.com
 baseurl:             '/blog'
